fix:alignment

--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ a:hover {
 }
 .file-entry {
   color: #6610f2;
+  span {
+    display: flex;
+  }
+  svg {
+    margin-top: 3px;
+    margin-right: 6px;
+  }
 }
 .title {
   position: relative;
